--- a/gaming.html
+++ b/gaming.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Spielen </title>
+    <title>Gaming </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -28,8 +28,8 @@
                             <!-- <li><a href="index.html">Startseite </a></li> -->
                             <li><a href="hotels.html">Hotels </a></li>
                             <li><a href="restaurants.html">Restaurants</a></li>
-                            <li><a href="draussen.html">Draussen </a></li>
-                            <li><a href="spielen.html" class="active"> Spielen</a></li>
+                            <li><a href="outdoor.html">Outdoor </a></li>
+                            <li><a href="gaming.html" class="active"> Gaming</a></li>
                             <li><a href="kontaktieren-sie-uns.html">Kontaktieren Sie uns </a></li>
                         </ul>
                     </div>
@@ -48,7 +48,7 @@
         <div class="container">
             <div class="bnr-inner">
                 <div class="bnr-text">
-                    <!-- <h1> Gaming </h1> -->
+                    <h1> Gaming </h1>
                 </div>
             </div>
         </div>
@@ -56,21 +56,14 @@
     <!-- Banner -->
     <section class="hotels-wrapper">
         <div class="container">
-
             <div class="hotels-cards">
                 <div class="hotels-text">
-                    <h1>Top-Tipps für die Hotelwahl in der Schweiz </h1>
-                </div>
-                <div class="hotels-text">
-                    <p>Die Schweizer Casinos bieten eine gelungene Mischung aus Spielspaß, Unterhaltung und Luxus. Egal,
-                        ob Sie einen eleganten Abend oder die Chance, Ihr Glück zu versuchen, suchen - diese Casinos
-                        bieten ein unvergessliches Erlebnis in einer atemberaubenden
-                        Schweizer Kulisse. Also, setzen Sie aufs Glück, drehen Sie das Rad und lassen Sie sich vom
-                        Spielspaß in der Schweiz auf ein aufregendes Abenteuer mitnehmen. Die Auswahl des besten Casinos
-                        für Ihr Unterhaltungs- und Spielerlebnis erfordert
-                        sorgfältige Überlegung. Hier sind einige Top-Tipps, um Ihnen bei der Auswahl des richtigen
-                        Casinos zu helfen:
-
+                    <p>Die Schweiz, bekannt für ihre atemberaubende Landschaft und reiche Kultur, bietet auch eine
+                        lebendige und aufregende Casinowelt, die all diejenigen anzieht, die Unterhaltung und einen
+                        Hauch von Glamour suchen. Egal, ob Sie ein erfahrener Spieler oder ein Gelegenheitsspieler sind,
+                        die Schweiz hat eine Reihe erstklassiger Casinos zu bieten. Begleiten Sie uns, während wir die
+                        besten Casinos in der Schweiz erkunden, wo das Spielen auf Luxus trifft und unvergessliche
+                        Erlebnisse auf Sie warten.
                     </p>
                 </div>
                 <div class="wrapper-row-one">
@@ -305,188 +298,6 @@
             </div>
         </div>
     </section>
-
-    <section class="hotels-wrapper" id="hotel-content">
-        <div class="container">
-            <div class="hotels-cards">
-
-                <div class="wrapper-row">
-                    <div class="row">
-                        <div class="col-lg-4">
-                            <div class="hotels-box">
-                                <div class="hotelsimg">
-
-                                    <img src="images/ht01.jpeg" alt="">
-
-                                </div>
-                                <div class="hotelsimg-text">
-
-                                    <h6>Prioritäten festlegen : <span>
-                                        </span></h6>
-                                    <p>Bestimmen Sie, was Ihnen am wichtigsten ist. Sind Sie hauptsächlich an Spielen,
-                                        Unterhaltung, Restaurants oder einer Kombination dieser Faktoren interessiert?
-                                        Das Wissen um Ihre Prioritäten wird Ihre Entscheidung leiten.
-                                    </p>
-
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="hotels-box">
-                                <div class="hotelsimg">
-
-                                    <img src="images/ht02.jpeg" alt="">
-
-                                </div>
-                                <div class="hotelsimg-text">
-
-                                    <h6>Spielmöglichkeiten :<span>
-
-                                        </span></h6>
-                                    <p>Bewerten Sie die Vielfalt der angebotenen Spiele. Prüfen Sie, ob das Casino Ihre
-                                        Lieblingsspiele hat, sei es Spielautomaten, Tischspiele wie Blackjack und Poker
-                                        oder spezielle Spiele.
-                                    </p>
-
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="hotels-box">
-                                <div class="hotelsimg">
-
-                                    <img src="images/ht03.jpeg" alt="">
-
-                                </div>
-                                <div class="hotelsimg-text">
-
-                                    <h6>Treueprogramme : <span>
-                                        </span></h6>
-                                    <p> Überprüfen Sie, ob das Casino ein Treue- oder
-                                        Belohnungsprogramm anbietet. Diese Programme können Vorteile wie kostenloses
-                                        Spiel, Rabatte in Restaurants und Zimmer-Upgrades bieten, um Ihr Erlebnis
-                                        angenehmer zu gestalten.
-
-                                    </p>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="wrapper-row one">
-                    <div class="row">
-                        <div class="col-lg-4">
-                            <div class="hotels-box">
-                                <div class="hotelsimg">
-
-                                    <img src="images/ht04.jpeg" alt="">
-
-                                </div>
-                                <div class="hotelsimg-text">
-                                    <h6>Atmosphäre und Stil : <span>
-                                        </span></h6>
-                                    <p> Verschiedene Casinos haben unterschiedliche Atmosphären und Stile. Einige sind
-                                        für ihren Luxus und ihre Opulenz bekannt, während andere eine entspannte und
-                                        legerere Umgebung bieten. Wählen Sie das Casino, das Ihren Vorlieben entspricht.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="hotels-box">
-                                <div class="hotelsimg">
-
-                                    <img src="images/ht03.jpeg" alt="">
-
-                                </div>
-                                <div class="hotelsimg-text">
-
-                                    <h6>Lizenzierung und Vorschriften : <span>
-                                        </span></h6>
-                                    <p> Stellen Sie sicher, dass das Casino von den entsprechenden Behörden lizenziert
-                                        und reguliert ist. Dies gewährleistet faires Spielen und den Schutz der Kunden.
-
-                                    </p>
-
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4">
-                            <div class="hotels-box">
-                                <div class="hotelsimg">
-
-                                    <img src="images/ht03.jpeg" alt="">
-
-                                </div>
-                                <div class="hotelsimg-text">
-
-                                    <h6>Sonderaktionen : <span>
-                                        </span></h6>
-                                    <p> Überprüfen Sie, ob das Casino besondere Aktionen oder Events während Ihres
-                                        Besuchs veranstaltet. Diese können Mehrwert für Ihr Erlebnis bieten.
-
-                                    </p>
-
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="hotels-box">
-                                <div class="hotelsimg">
-
-                                    <img src="images/ht03.jpeg" alt="">
-
-                                </div>
-                                <div class="hotelsimg-text">
-
-                                    <h6>Barrierefreiheit : <span>
-                                        </span></h6>
-                                    <p> Berücksichtigen Sie die Barrierefreiheit des Casinos, insbesondere wenn Sie
-                                        besondere Bedürfnisse oder Mobilitätseinschränkungen haben.
-
-
-                                    </p>
-
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="hotels-box">
-                                <div class="hotelsimg">
-
-                                    <img src="images/ht03.jpeg" alt="">
-
-                                </div>
-                                <div class="hotelsimg-text">
-
-                                    <h6>Budget : <span>
-                                        </span></h6>
-                                    <p> Legen Sie ein Budget für Ihren Casinobesuch fest. Halten Sie sich daran, um
-                                        verantwortungsvolles Spielen und finanzielle Kontrolle sicherzustellen. Soziale
-                                        Verantwortung: Wenn das problematische Glücksspiel für Sie ein Anliegen ist,
-                                        informieren Sie sich über das Engagement des Casinos für verantwortungsvolles
-                                        Spielen und seine Bemühungen zur Bekämpfung von Spielsucht.
-
-
-                                    </p>
-
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="wrapper-row one">
-                    <div class="hotels-text">
-                        <h5>Indem Sie diese Tipps beachten, können Sie</h5>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section>
     <!-- footer  -->
     <footer>
         <div class="container">
@@ -519,8 +330,8 @@
                                 <!-- <li><a href="index.html">Startseite </a></li> -->
                                 <li><a href="hotels.html">Hotels </a></li>
                                 <li><a href="restaurants.html">Restaurants</a></li>
-                                <li><a href="draussen.html">Draussen </a></li>
-                                <li><a href="spielen.html"> Spielen</a></li>
+                                <li><a href="outdoor.html">Outdoor </a></li>
+                                <li><a href="gaming.html"> Gaming</a></li>
                                 <li><a href="kontaktieren-sie-uns.html">Kontaktieren Sie uns </a></li>
                             </ul>
                         </div>
@@ -532,7 +343,7 @@
                                 <li><a href="mailto:info@SwissComparez.ch " class="mail">
                                         info@SwissComparez.ch
                                     </a></li>
-                                <li><a href="tel+41(0)123456789" class="number">
+                                    <li><a href="tel+41(0)123456789" class="number">
                                         +41 (0)123456789
                                     </a>
                                 </li>
