--- a/hotels.html
+++ b/hotels.html
@@ -59,6 +59,7 @@
         <div class="container">
             <div class="hotels-cards">
                 <div class="hotels-text">
+                    <h1>Die besten Hotels der Schweiz</h1>
                     <p>Die Schweiz mit ihren atemberaubenden alpinen Landschaften und lebendigen Städten ist ein
                         Traumziel für Reisende aus der ganzen Welt. Die oft wahrgenommenen hohen Kosten schrecken jedoch
                         viele Besucher ab. Aber keine Sorge! Die Schweiz bietet auch eine Reihe exzellenter
@@ -282,8 +283,7 @@
 
                                     </p>
                                     <div class="card-btn">
-                                        <a href="https://matterhornhostel.com/ 
-                                        " target="_blank">
+                                        <a href="https://matterhornhostel.com/" target="_blank">
                                             Mehr lesen
                                         </a>
                                     </div>
@@ -296,6 +296,130 @@
             </div>
         </div>
     </section>
+
+
+    <section class="hotels-wrapper" id="hotel-content">
+        <div class="container">
+            <div class="hotels-cards">
+                <div class="hotels-text">
+                    <h1>Top-Tipps für die Hotelwahl in der Schweiz </h1>
+                </div>
+                <div class="wrapper-row">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <div class="hotels-box">
+                                <div class="hotelsimg">
+
+                                    <img src="images/ht01.jpeg" alt="">
+
+                                </div>
+                                <div class="hotelsimg-text">
+
+                                    <h6>Annehmlichkeiten : <span>
+                                        </span></h6>
+                                    <p>Ermitteln Sie, welche Annehmlichkeiten Ihnen wichtig sind. Dazu gehören
+                                        möglicherweise WLAN, hoteleigene Restaurants,
+                                        Spa-Einrichtungen, Fitnesscenter, Pools und mehr. Erstellen Sie eine Liste der
+                                        für Sie unverzichtbaren Annehmlichkeiten, um Ihre Auswahl zu leiten.
+                                    </p>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="hotels-box">
+                                <div class="hotelsimg">
+
+                                    <img src="images/ht02.jpeg" alt="">
+
+                                </div>
+                                <div class="hotelsimg-text">
+
+                                    <h6>Sternebewertung : <span>
+
+                                        </span></h6>
+                                    <p>In der Schweiz gibt es ein Sternebewertungssystem für Hotels,
+                                        das Ihnen eine Vorstellung vom Serviceniveau und den gebotenen
+                                        Annehmlichkeiten geben kann. Berücksichtigen Sie die Sternebewertung
+                                        bei der Auswahl eines Hotels.
+                                    </p>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="hotels-box">
+                                <div class="hotelsimg">
+
+                                    <img src="images/ht03.jpeg" alt="">
+
+                                </div>
+                                <div class="hotelsimg-text">
+
+                                    <h6>Sprache : <span>
+                                        </span></h6>
+                                    <p> Da die Schweiz vier Amtssprachen hat (Deutsch, Französisch, Italienisch und
+                                        Rätoromanisch), stellen Sie sicher, dass das Hotelpersonal in einer Sprache
+                                        kommunizieren kann, die Sie verstehen und sprechen. Angebote und Pakete:
+                                        Überprüfen Sie, ob das Hotel Sonderangebote, Pauschalangebote oder Rabatte
+                                        anbietet. Dies kann Ihnen dabei helfen, Geld zu sparen oder Mehrwert während
+                                        Ihres Aufenthalts zu erhalten.
+
+                                    </p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="wrapper-row one">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <div class="hotels-box">
+                                <div class="hotelsimg">
+
+                                    <img src="images/ht04.jpeg" alt="">
+
+                                </div>
+                                <div class="hotelsimg-text">
+
+                                    <h6>Örtlicher Charakter : <span>
+
+                                        </span></h6>
+                                    <p> Wenn Sie ein authentisches Schweizer Erlebnis wünschen, erwägen Sie einen
+                                        Aufenthalt in einem Hotel, das die lokale Kultur und Traditionen widerspiegelt.
+
+                                    </p>
+
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="wrapper-row one">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="hotels-box">
+                                <div class="hotelsimg-text">
+                                    <p> Durch Berücksichtigung dieser Tipps können Sie das richtige Hotel in der Schweiz
+                                        auswählen, das Ihren Budget-, Präferenz- und Reisezielen entspricht, und somit
+                                        einen komfortablen und angenehmen Aufenthalt in diesem malerischen Land
+                                        gewährleisten.
+
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
     <!-- footer  -->
     <footer>
         <div class="container">
