--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
                 <div class="bnr-text">
                     <h1> Willkommen in der Schweiz!</h1>
                     <p>Sind Sie bereit, eine Reise durch die atemberaubenden Landschaften, charmanten Städte und
-                        kulturellen Wunder der Schweiz anzutreten? Suchen Sie nicht weiter! Willkommen bei Entdecke die
-                        Schweiz, Ihrem vertrauenswürdigen Reisebegleiter, um die Schönheit und das Wunder dieses alpinen
-                        Paradieses zu erkunden.
+                        kulturellen Wunder der Schweiz anzutreten? Suchen Sie nicht weiter! 
                     </p>
                 </div>
             </div>
