--- a/outdoor.html
+++ b/outdoor.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Draussen</title>
+    <title>Outdoor </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -28,8 +28,8 @@
                             <!-- <li><a href="index.html">Startseite </a></li> -->
                             <li><a href="hotels.html">Hotels </a></li>
                             <li><a href="restaurants.html">Restaurants</a></li>
-                            <li><a href="draussen.html" class="active">Draussen </a></li>
-                            <li><a href="spielen.html"> Spielen</a></li>
+                            <li><a href="outdoor.html" class="active">Outdoor </a></li>
+                            <li><a href="gaming.html"> Gaming</a></li>
                             <li><a href="kontaktieren-sie-uns.html">Kontaktieren Sie uns </a></li>
                         </ul>
                     </div>
@@ -48,7 +48,7 @@
         <div class="container">
             <div class="bnr-inner">
                 <div class="bnr-text">
-                    <!-- <h1> Outdoor </h1> -->
+                    <h1> Outdoor </h1>
                 </div>
             </div>
         </div>
@@ -58,8 +58,7 @@
         <div class="container">
             <div class="hotels-cards">
                 <div class="hotels-text">
-                    <h1>Entdecken Sie die majestätische Aussicht auf die Schweiz
-                    </h1>
+
                     <p>Die Schweiz, mit ihren unberührten Landschaften, majestätischen Bergen und einer tiefen Liebe zur
                         Natur, ist ein Paradies für Abenteuerlustige. Von aufregenden Alpenausflügen bis hin zu
                         entspannten Aktivitäten am See bietet dieses Land eine Vielzahl unglaublicher Erlebnisse.
@@ -99,8 +98,7 @@
                     <div class="row">
                         <div class="col-lg-4">
                             <div class="jungfrauj-img">
-                                <a href="https://paragliding-interlaken.ch/de/aktivitaten/paragliding-big-blue-sommer/"
-                                    target="_blank">
+                                <a href="https://paragliding-interlaken.ch/de/aktivitaten/paragliding-big-blue-sommer/" target="_blank">
                                     <img src="images/Paragliding.jpg" alt="j">
                                 </a>
                             </div>
@@ -117,8 +115,8 @@
                                     der atemberaubenden Kulisse der Schweizer Alpen.
                                 </p>
                                 <div class="out-btn">
-                                    <a href="https://paragliding-interlaken.ch/de/aktivitaten/paragliding-big-blue-sommer/"
-                                        target="_blank">Mehr
+                                    <a
+                                        href="https://paragliding-interlaken.ch/de/aktivitaten/paragliding-big-blue-sommer/" target="_blank">Mehr
                                         lesen</a>
                                 </div>
                             </div>
@@ -130,8 +128,7 @@
                     <div class="row">
                         <div class="col-lg-4">
                             <div class="jungfrauj-img">
-                                <a href="https://www.myswitzerland.com/de-ch/planung/transport-aufenthalt/billette/"
-                                    target="_blank">
+                                <a href="https://www.myswitzerland.com/de-ch/planung/transport-aufenthalt/billette/" target="_blank">
                                     <img src="images/boat.jpg" alt="j">
                                 </a>
                             </div>
@@ -150,8 +147,8 @@
 
                                 </p>
                                 <div class="out-btn">
-                                    <a href="https://www.myswitzerland.com/de-ch/planung/transport-aufenthalt/billette/"
-                                        target="_blank">Mehr
+                                    <a
+                                        href="https://www.myswitzerland.com/de-ch/planung/transport-aufenthalt/billette/" target="_blank">Mehr
                                         lesen</a>
                                 </div>
                             </div>
@@ -179,8 +176,7 @@
                                     Spaziergängen und anspruchsvollen Wanderungen in den Schweizer Alpen.
                                 </p>
                                 <div class="out-btn">
-                                    <a href="https://www.zermatt.ch/Media/Listen-Touren/Wandertouren "
-                                        target="_blank">Mehr
+                                    <a href="https://www.zermatt.ch/Media/Listen-Touren/Wandertouren " target="_blank">Mehr
                                         lesen</a>
                                 </div>
                             </div>
@@ -249,8 +245,8 @@
                     <div class="row">
                         <div class="col-lg-4">
                             <div class="jungfrauj-img">
-                                <a href="https://www.glacier3000.ch/en/activities/peak-walk-by-tissot-suspension-bridge "
-                                    target="_blank">
+                                <a
+                                    href="https://www.glacier3000.ch/en/activities/peak-walk-by-tissot-suspension-bridge " target="_blank">
                                     <img src="images/Glacier.jpg" alt="j">
                                 </a>
                             </div>
@@ -269,8 +265,8 @@
                                     umliegenden Gipfel.
                                 </p>
                                 <div class="out-btn">
-                                    <a href="https://www.glacier3000.ch/en/activities/peak-walk-by-tissot-suspension-bridge "
-                                        target="_blank">Mehr
+                                    <a
+                                        href="https://www.glacier3000.ch/en/activities/peak-walk-by-tissot-suspension-bridge " target="_blank">Mehr
                                         lesen</a>
                                 </div>
                             </div>
@@ -352,8 +348,8 @@
                                 <!-- <li><a href="index.html">Startseite </a></li> -->
                                 <li><a href="hotels.html">Hotels </a></li>
                                 <li><a href="restaurants.html">Restaurants</a></li>
-                                <li><a href="draussen.html">Draussen </a></li>
-                                <li><a href="spielen.html"> Spielen</a></li>
+                                <li><a href="outdoor.html">Outdoor </a></li>
+                                <li><a href="gaming.html"> Gaming</a></li>
                                 <li><a href="kontaktieren-sie-uns.html">Kontaktieren Sie uns </a></li>
                             </ul>
                         </div>
@@ -365,7 +361,7 @@
                                 <li><a href="mailto:info@SwissComparez.ch " class="mail">
                                         info@SwissComparez.ch
                                     </a></li>
-                                <li><a href="tel+41(0)123456789" class="number">
+                                    <li><a href="tel+41(0)123456789" class="number">
                                         +41 (0)123456789
                                     </a>
                                 </li>
